# command-line-rust-solutions

./: Cargo.toml  README.md
calr/: Cargo.toml
calr/src/: lib.rs  main.rs
calr/tests/: cli.rs
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
commr/: Cargo.toml
commr/src/: lib.rs  main.rs
commr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: lib.rs  main.rs
cutr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs  main.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
fortuner/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
lsr/: Cargo.toml
lsr/src/: lib.rs  main.rs
lsr/tests/: cli.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
uniqr/tests/: cli.rs
utils/src/: lib.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs
