[package]
name = "fortuner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
regex = "1.12.2"
snafu = "0.8.9"
utils = { path = "../utils" }
walkdir = "2.5.0"
rand = "0.9.2"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand_distr = "0.5.1"
