[package]
name = "lsr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
snafu = "0.8.9"
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
rand_distr = "0.5.1"
